--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="opcion2">Secundario</string>
     <string name="opcion1">Principal</string>
     <string name="opciones">Selecciona tipo de personaje (uno o varias opciones)</string>
-    <string name="hintDescripcion">Ingresa descripcion)</string>
+    <string name="hintDescripcion">Ingresa descripcion</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
